[gd_scene load_steps=4 format=3 uid="uid://dpxqd5jqpf4g7"]

[ext_resource type="Script" uid="uid://dw6ygdx11hqak" path="res://victory_cutscene.gd" id="1_lhrbg"]
[ext_resource type="Texture2D" uid="uid://fqdwg0gp4ybn" path="res://down.tres" id="2_blgn0"]
[ext_resource type="Texture2D" uid="uid://niwkd42rsd3t" path="res://amulet.png" id="3_lhrbg"]

[node name="VictoryCutscene" type="Node2D"]
script = ExtResource("1_lhrbg")

[node name="HUDLayer" type="CanvasLayer" parent="."]

[node name="DialogPanel" type="Panel" parent="HUDLayer"]
offset_left = 2.0
offset_top = 2.0
offset_right = 2.0
offset_bottom = 2.0

[node name="TextLabel" type="Label" parent="HUDLayer/DialogPanel"]
layout_mode = 0
offset_left = 290.0
offset_top = 106.0
offset_right = 892.0
offset_bottom = 293.0

[node name="NameLabel" type="Label" parent="HUDLayer/DialogPanel"]
layout_mode = 0
offset_left = 104.0
offset_top = 79.0
offset_right = 144.0
offset_bottom = 102.0

[node name="PressLabel" type="Label" parent="HUDLayer/DialogPanel"]
layout_mode = 0
offset_left = 491.0
offset_top = 596.0
offset_right = 680.0
offset_bottom = 619.0
text = "Press Space To Continue"

[node name="Hero" type="Sprite2D" parent="."]
position = Vector2(368, 470)
scale = Vector2(0.66796875, 0.66333336)
texture = ExtResource("2_blgn0")

[node name="Wizard" type="Sprite2D" parent="."]
position = Vector2(566, 399)
scale = Vector2(1.9131892, 1.5677222)
texture = ExtResource("3_lhrbg")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="LineTimer" type="Timer" parent="."]
wait_time = 2.526
autostart = true
